<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <rocks.lechick.android.tourlondon.CutLayout
        android:id="@+id/museum_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/british_museum"
            android:scaleType="centerCrop"/>
    </rocks.lechick.android.tourlondon.CutLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/museum_photo"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/british_museum_hours"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/british_museum_address"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/british_museum_phone"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/british_museum_summary"
            android:textAlignment="center"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/british_museum_website"
            android:textAlignment="center"
            android:layout_gravity="end"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/navigate"
            android:textColor="@android:color/darker_gray"
            android:background="@drawable/shape"/>
    </LinearLayout>

</RelativeLayout>